reference company alignment issue fix

--- a/less/app/user-profile.less
+++ b/less/app/user-profile.less
@@ -3188,7 +3188,7 @@
         .reference > ul > li {
             text-align: center;
             margin-left: 15px;
-            margin-right: 62px;
+            margin-right: 15px;
             margin-bottom: 16px;
         }
     }
